fixed title on mobile

--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ footer img {
 }
 
 #projects-mobile .slick-slide{
-    height: 75vh;
+    height: 25vh;
 }
 
 #projects-mobile .slick-prev:before, #projects-mobile .slick-next:before{
